--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Intelligent Systems course detailed notes
+# email: your-email@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "ml-notes-detailed" # the subpath of your site, e.g. /blog  CURRENT: ml-notes-detailed
+  This blog dives deep into the Intelligent Systems course I attended in university.
+  Rigorous mathematical presentations will accompany a critical analysis of the methodologies and data.
+baseurl: "" # the subpath of your site, e.g. /blog  CURRENT: ml-notes-detailed
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  MKIVV0
 
 # Build settings
 theme: minima
