--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: Intelligent Systems course detailed notes
 description: >- # this means to ignore newlines until "baseurl:"
   This blog dives deep into the Intelligent Systems course I attended in university.
   Rigorous mathematical presentations will accompany a critical analysis of the methodologies and data.
-baseurl: "" # the subpath of your site, e.g. /blog  CURRENT: ml-notes-detailed
+baseurl: "ml-notes-detailed" # the subpath of your site, e.g. /blog  CURRENT: ml-notes-detailed
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  MKIVV0
